# FLUER

./: .gitignore  Makefile  README.md  STRUCTURE.md  docker-compose.yml  netlify.toml  package.json  turbo.json  vercel.json
.github/workflows/: ci.yml
apps/web/: .env.example  next.config.ts  package.json  tailwind.config.ts
apps/web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
apps/web/src/app/launch/: page.tsx
apps/web/src/app/predict/: page.tsx
apps/web/src/app/token/[ca]/: page.tsx
apps/web/src/app/trade/: page.tsx
apps/web/src/app/trade/[market]/: page.tsx
apps/web/src/components/discovery/: LiveFeed.tsx  MarketTable.tsx  ProtocolStatsBanner.tsx  TokenPageClient.tsx
apps/web/src/components/launch/: LaunchFeed.tsx  LaunchWizard.tsx
apps/web/src/components/layout/: Header.tsx
apps/web/src/components/predict/: PredictionFeed.tsx
apps/web/src/components/trade/: MarketInfoBar.tsx  MarketsOverview.tsx  OrderPanel.tsx  PositionsPanel.tsx  RecentTrades.tsx  TradeTerminal.tsx  TradingChart.tsx
apps/web/src/components/ui/: Skeleton.tsx
apps/web/src/components/ui/icons/: FluerLogo.tsx  NavIcons.tsx  WalletIcons.tsx
apps/web/src/components/wallet/: WalletButton.tsx  WalletContextProvider.tsx
apps/web/src/lib/: constants.ts  types.ts  utils.ts
apps/web/src/lib/api/: fluer.ts  gecko.ts  helius.ts  pumpportal.ts
apps/web/src/lib/hooks/: useMarkets.ts  usePosition.ts  usePriceData.ts  usePumpPortalFeed.ts  useWebSocket.ts
apps/web/src/lib/store/: QueryProvider.tsx  useAppStore.ts  useTradeStore.ts
programs/: Anchor.toml  Cargo.toml
programs/fluer_launchpad/: Cargo.toml
programs/fluer_launchpad/src/: errors.rs  lib.rs
programs/fluer_launchpad/src/instructions/: create_token.rs  curve_trade.rs  initialize.rs  mod.rs
programs/fluer_launchpad/src/math/: bonding_curve.rs  mod.rs
programs/fluer_launchpad/src/state/: mod.rs
programs/fluer_perp_engine/: Cargo.toml
programs/fluer_perp_engine/src/: lib.rs
programs/fluer_perp_engine/src/math/: mod.rs  vamm.rs
programs/fluer_perp_engine/src/state/: mod.rs
programs/fluer_prediction/: Cargo.toml
programs/fluer_prediction/src/: errors.rs  lib.rs
programs/fluer_prediction/src/instructions/: mod.rs
programs/fluer_prediction/src/state/: mod.rs
programs/fluer_token/: Cargo.toml
programs/fluer_token/src/: lib.rs
programs/tests/: launchpad.test.ts
scripts/: deploy-mainnet.sh
services/: Cargo.toml
services/api-gateway/: .env.example  Cargo.toml  Dockerfile
services/api-gateway/migrations/: 001_core_schema.sql  002_support_tables.sql  003_optimizations.sql
services/api-gateway/src/: main.rs  state.rs  websocket.rs
services/api-gateway/src/middleware/: auth.rs  mod.rs  rate_limit.rs
services/api-gateway/src/routes/: discovery.rs  launch.rs  markets.rs  mod.rs  portfolio.rs  predictions.rs  stats.rs  tokens.rs
services/market-factory/: Cargo.toml
services/market-factory/src/: graduation_monitor.rs  indexer.rs  main.rs  market_deployer.rs
services/price-aggregator/: Cargo.toml
services/price-aggregator/src/: main.rs
services/vanity-grinder/: Cargo.toml
services/vanity-grinder/src/: main.rs
