[workspace]
members = [
    "api-gateway",
    "market-factory",
    "price-aggregator",
    "vanity-grinder",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
axum = { version = "0.7.5", features = ["ws", "macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
redis = { version = "0.26", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "json"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
solana-client = "1.18.26"
solana-sdk = "1.18.26"
yellowstone-grpc-client = "1.13.0"
yellowstone-grpc-proto = "1.13.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
