[package]
name = "fluer_token"
version = "1.0.0"
description = "FLUER Protocol — $FLUER SPL Token + Staking Module"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fluer_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl  = { workspace = true }
