[package]
name = "market-factory"
version = "1.0.0"
description = "FLUER Protocol — Market Factory (graduation monitor + event indexer)"
edition = "2021"
[[bin]]
name = "market-factory"
path = "src/main.rs"
[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = "1.18.26"
base64 = "0.22"
