[package]
name = "price-aggregator"
version = "1.0.0"
description = "FLUER Protocol — Price Aggregator (Pyth + GeckoTerminal)"
edition = "2021"
[[bin]]
name = "price-aggregator"
path = "src/main.rs"
[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
