[package]
name = "vanity-grinder"
version = "1.0.0"
description = "FLUER Vanity Mint Address Grinder — generates keypairs with 'flur' suffix"
edition = "2021"

[[bin]]
name = "vanity-grinder"
path = "src/main.rs"

[dependencies]
solana-sdk = "1.18.26"
bs58 = "0.5.1"
rayon = "1.10.0"
clap = { version = "4.5.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
hex = "0.4"
aes-gcm = "0.10"
zeroize = "1.8"
